--- a/kafka/supervisor/zookeeper.conf
+++ b/kafka/supervisor/zookeeper.conf
@@ -1,4 +1,6 @@
 [program:zookeeper]
-command=/usr/share/zookeeper/bin/zkServer.sh start-foreground
+command=/usr/bin/start-zookeeper.sh
 autostart=true
 autorestart=true
+stdout_logfile=/dev/stdout
+stdout_logfile_maxbytes=0
