--- a/kafka/Dockerfile
+++ b/kafka/Dockerfile
@@ -1,9 +1,6 @@
 # Kafka and Zookeeper
 
 FROM adoptopenjdk/openjdk11:latest
-#RUN mkdir /opt/app
-#COPY japp.jar /opt/app
-#CMD ["java", "-jar", "/opt/app/japp.jar"]
 
 RUN  apt-get update \
   && apt-get install -y wget \
@@ -20,15 +17,14 @@ RUN tar xfz /tmp/zookeeper-"$ZOOKEEPER_VERSION".tgz -C /opt && rm /tmp/zookeeper
 ADD config/zoo.cfg $ZOOKEEPER_HOME/conf
 
 ENV SCALA_VERSION 2.13
-ENV KAFKA_VERSION 2.7.0
+ENV KAFKA_VERSION 2.8.0
 ENV KAFKA_HOME /opt/kafka_"$SCALA_VERSION"-"$KAFKA_VERSION"
 ENV KAFKA_DOWNLOAD_URL https://archive.apache.org/dist/kafka/"$KAFKA_VERSION"/kafka_"$SCALA_VERSION"-"$KAFKA_VERSION".tgz
 
 RUN wget -q $KAFKA_DOWNLOAD_URL -O /tmp/kafka_"$SCALA_VERSION"-"$KAFKA_VERSION".tgz
 RUN tar xfz /tmp/kafka_"$SCALA_VERSION"-"$KAFKA_VERSION".tgz -C /opt && rm /tmp/kafka_"$SCALA_VERSION"-"$KAFKA_VERSION".tgz
 
-ADD scripts/start-kafka.sh /usr/bin/start-kafka.sh
-ADD scripts/start-zookeeper.sh /usr/bin/start-zookeeper.sh
+ADD scripts/start-zookeeper-kafka.sh /usr/bin/start-zookeeper-kafka.sh
 
 # Supervisor config
 ADD supervisor/kafka.conf /etc/supervisor/conf.d/
